# pay_zhifubao

./: .gitignore  README.md  pyrightconfig.json
.cursor/skills/pay-api-frontend-integration/: SKILL.md  reference.md
client_pay/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client_pay/src/: App.tsx  vite-env.d.ts
client_pay/src/api/: pay.ts
client_pay/src/layouts/: AppShell.tsx
client_pay/src/lib/: alipayRedirect.ts
client_pay/src/pages/: OrdersPage.tsx  PayCheckoutPage.tsx  PayReturnPage.tsx
client_pay/src/types/: pay.ts
docs/: 任务与进度.md  前端对接API.md  支付宝网页支付需求说明.md
pay_api/: .env.example  .gitignore  README.md  __init__.py  alembic.ini  alipay_notify.py  alipay_service.py  db.py  key_util.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  routes.py  schemas.py  settings.py  trade_repository.py
pay_api/alembic/: env.py  script.py.mako
pay_api/alembic/versions/: 001_initial_pay_transactions.py
